tests/baselines/reference/typesWithDuplicateTypeParameters.errors.txt
==== tests/cases/conformance/types/typeParameters/typeParameterLists/typesWithDuplicateTypeParameters.ts (6 errors) ====
    class C<T, T> { }
               ~
!!! error TS2300: Duplicate identifier 'T'.
    class C2<T, U, T> { }
                   ~
!!! error TS2300: Duplicate identifier 'T'.
    
    interface I<T, T> { }
                   ~
!!! error TS2300: Duplicate identifier 'T'.
    interface I2<T, U, T> { }
                       ~
!!! error TS2300: Duplicate identifier 'T'.
    
    function f<T, T>() { }
                  ~
!!! error TS2300: Duplicate identifier 'T'.
    function f2<T, U, T>() { }
                      ~
!!! error TS2300: Duplicate identifier 'T'.